--- a/latex/glossary.tex
+++ b/latex/glossary.tex
@@ -6,7 +6,7 @@
 }
 \newglossaryentry{Roundtrip3D}{
   name=Roundtrip3D,
-  description={Aim to extend SSIML, a MDD approach for 3D development to full round-trip engineering. \cite{roundtrip3dwebsite}}
+  description={Aim to extend SSIML, a MDD approach for 3D development to full round-trip engineering \cite{roundtrip3dwebsite}.}
 }
 
 \newacronym{GPU}{GPU}{Graphical Processing Unit}
@@ -20,15 +20,15 @@
 }
 \newglossaryentry{OpenGL}{
   name=OpenGL,
-  description={Open Graphics Library. An environment for developing portable, interactive 2D and 3D graphics applications. \cite{opengl}}
+  description={Open Graphics Library. An environment for developing portable, interactive 2D and 3D graphics applications \cite{opengl}.}
 }
 \newglossaryentry{git}{
   name=git,
-  description={A free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency. \cite{git}}
+  description={A free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency \cite{git}.}
 }
 \newglossaryentry{WebGL}{
   name=WebGL,
-  description={A cross-platform, royalty-free web standard for a low-level 3D graphics API based on OpenGL ES 2.0. \cite{webgl}}
+  description={A cross-platform, royalty-free web standard for a low-level 3D graphics API based on OpenGL ES 2.0 \cite{webgl}.}
 }
 \newacronym{3D}{3D}{3 dimensional}
 \newacronym{DAG}{DAG}{Directed Acyclic Graph}
