--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,22 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for kietsy at 2015-08-12 19:08:51 +0200
+%% Created for kietsy at 2015-08-13 19:37:26 +0200 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{angularbootstrap,
+	Date-Added = {2015-08-13 17:37:18 +0000},
+	Date-Modified = {2015-08-13 17:37:26 +0000},
+	Url = {https://docs.angularjs.org/guide/bootstrap}}
 
 @webpage{git,
 	Date-Added = {2015-08-12 17:08:47 +0000},
 	Date-Modified = {2015-08-12 17:08:51 +0000},
-	Url = {https://git-scm.com/}}
+	Url = {https://git-scm.com/},
+	Bdsk-Url-1 = {https://git-scm.com/}}
 
 @webpage{opengl,
 	Date-Added = {2015-08-12 17:07:36 +0000},
 	Date-Modified = {2015-08-12 17:07:46 +0000},
-	Url = {https://www.opengl.org/about/}}
+	Url = {https://www.opengl.org/about/},
+	Bdsk-Url-1 = {https://www.opengl.org/about/}}
 
 @webpage{diff,
 	Date-Added = {2015-08-11 19:11:52 +0000},
