--- a/latex/prelude.tex
+++ b/latex/prelude.tex
@@ -3,7 +3,7 @@
 \section{Introduction}
 \label{sec:Prelude}
 
-The goal of the thesis is to create a editor for \acr{3D} scenes, using web technologies,
+The goal of the thesis is to create an editor for \acr{3D} scenes, using web technologies,
 which enables its users to post-process \gls{X3D} scenes. These scenes are the
 product of a tool that was implemented as part of the DFG research
 project \gls{R3D} \cite{Jung:2015:SDA:2802768.2802837}.
@@ -11,7 +11,7 @@ project \gls{R3D} \cite{Jung:2015:SDA:2802768.2802837}.
 \subsection{Motivation}\label{motivation}
 
 As part of the \gls{R3D} project, a round-trip framework
- was developed.This framework also includes a
+was developed. This framework also includes a
 graphical editor for \acr{SSIML} \cite{Lenk:2012:MID:2338714.2338742} models, to describe \gls{3D} applications. Then
 \gls{R3D} can be used to generate boilerplate code for multiple programming
 languages, such as JavaScript, Java or C++, and an \gls{X3D} file describing
@@ -37,7 +37,7 @@ further, the orientation the \gls{3D} artists chose for its object may be unknow
 % TODO: so what now? convention or no convention?
 there is no convention for \gls{3D} modeling. \sout{Usually their is a convention
 about origin of coordinate system, scaling and orientation} (no there isn't, still
-not sure what to put here). However, we cannot assume that these conventions are
+not sure what to put here). However, one cannot assume that these conventions are
 always met. The main problem is, that \gls{3D} transformations, such as translation,
 orientation and scale of single \gls{3D} geometries, need to be adjusted. So far,
 there is no graphical tool that meets both of the following requirements:
